css/style.css
/* ... */
@font-face {
  font-family: "Finlandica-Regular";
  font-display: swap;
  src: url("../fonts/Finlandica-Regular.ttf") format("ttf"), url("../fonts/Finlandica-Regular.woff2") format("woff2");
  font-weight: initial;
  font-style: initial;
}

@font-face {
  font-family: "Finlandica-SemiBold";
  font-display: swap;
  src: url("../fonts/Finlandica-SemiBold.ttf") format("ttf"), url("../fonts/Finlandica-SemiBold.woff2") format("woff2");
  font-weight: initial;
  font-style: initial;
}

* {
  scrollbar-color: #bfd2ff transparent;
  scrollbar-width: thin;
}

html {
  scrollbar-width: none;
  min-height: 100%;
  height: auto;
}

body {
  height: auto;
  overflow-x: hidden;
  padding-top: 70px;
  font-family: "Finlandica-Regular";
  margin: 0;
  color: white;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  background: #2a1a40;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2a1a40), color-stop(12%, #993447), color-stop(35%, #e7af06), color-stop(64%, #f25c5c), color-stop(77%, #bf4158), color-stop(89%, #2a1a40));
  background: -o-linear-gradient(top, #2a1a40 0, #993447 12%, #e7af06 35%, #f25c5c 64%, #bf4158 77%, #2a1a40 89%);
  background: linear-gradient(180deg, #2a1a40 0, #993447 12%, #e7af06 35%, #f25c5c 64%, #bf4158 77%, #2a1a40 89%);
}

/* Только внешний скролл */

body::-webkit-scrollbar {
  background-color: black;
}

/* Весь скролл */

::-webkit-scrollbar {
  width: 8px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: #FFC000;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #993447;
}

.container-wrapper {
  position: relative;
  min-height: 730px;
}

.container {
  position: relative;
  max-width: 1140px;
  width: 100%;
  margin: 0 auto;
  padding: 0 30px;
}

.content-title {
  text-align: center;
  font-size: 60px;
  color: #F2CEAE !important;
}

.separation {
  width: 154px;
  height: 7px;
  margin: 13px auto 37px;
  background-color: #FFC000;
  border-radius: 10px;
}

.content-about {
  background-color: rgba(0, 0, 0, 0.3);
  font-size: 22px;
  max-width: 950px;
  margin: 0 auto;
  padding: 9px 37px;
  border-radius: 14px;
}

.content-about p {
  padding: 20px 0;
  font-size: 20px;
  text-align: justify;
}

.content-about ol {
  margin-left: 33px;
  list-style-type: square;
}

.content-about li {
  font-size: 20px;
  text-align: justify;
}

.social-networks_wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: none;
}

.social-networks_wrapper a img {
  width: 25px;
  height: 25px;
  padding: 4px;
  margin: 0 3px 5px 3px;
  background-color: #FFC000;
  border-radius: 5px;
  cursor: pointer;
  pointer-events: all;
}

.burger__active .burger__line:first-child {
  -webkit-transform: translateY(8px) rotate(45deg) !important;
      -ms-transform: translateY(8px) rotate(45deg) !important;
          transform: translateY(8px) rotate(45deg) !important;
}

.burger__active .burger__line:nth-child(2) {
  opacity: 0 !important;
}

.burger__active .burger__line:last-child {
  -webkit-transform: translateY(-8px) rotate(-45deg) !important;
      -ms-transform: translateY(-8px) rotate(-45deg) !important;
          transform: translateY(-8px) rotate(-45deg) !important;
}

.burger-button_wrapper {
  position: relative;
  z-index: 22;
  height: 100%;
  display: none;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.burger-button_wrapper .burger-button {
  padding: 12px 8px;
  background-color: transparent;
}

.burger-button_wrapper .burger-button .burger {
  position: relative;
  display: block;
  width: 24px;
  height: 18px;
}

.burger-button_wrapper .burger-button .burger__line {
  position: absolute;
  left: 0;
  -webkit-transform: translateY(0) rotate(0);
      -ms-transform: translateY(0) rotate(0);
          transform: translateY(0) rotate(0);
  width: 100%;
  height: 2px;
  opacity: 1;
  background-color: white;
  -webkit-transform-origin: 50% 50%;
      -ms-transform-origin: 50% 50%;
          transform-origin: 50% 50%;
  -webkit-transition: .2s ease-in-out;
  -o-transition: .2s ease-in-out;
  transition: .2s ease-in-out;
}

.burger-button_wrapper .burger-button .burger__line:first-child {
  top: 0;
}

.burger-button_wrapper .burger-button .burger__line:nth-child(2) {
  top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
}

.burger-button_wrapper .burger-button .burger__line:last-child {
  bottom: 0;
}

.header-mobile {
  position: fixed;
  top: -100vh;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 21;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 100vw;
  max-height: 100vh;
  -webkit-transition: opacity .2s ease, top .4s ease;
  -o-transition: opacity .2s ease, top .4s ease;
  transition: opacity .2s ease, top .4s ease;
  background: #000000;
  overflow: hidden;
  box-shadow: 0px 6px 0px 0px #FFC000;
}

.header-mobile .menu-list {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.header-mobile .menu-list_item {
  margin: 20px 0;
  font-size: 22px;
}

.menu-header {
  position: fixed;
  top: 0;
  z-index: 20;
  width: 100%;
  height: 70px;
  box-shadow: 0px 6px 0px 0px #FFC000;
  background-color: #000000;
}

.menu-header .container {
  height: 100%;
  display: flex;
  justify-content: space-between;
}

.company_logo {
  position: relative;
  font-size: 25px;
  cursor: pointer;
  font-variant: small-caps;
  font-weight: bold;
  margin: auto 0;
}
/* ... */

